# HARK

./: .buildinfo  .codecov.yml  .copier-answers.yml  .coveragerc  .gitignore  .gitignore.txt  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  CHANGELOG.html  CHANGELOG.md  CHANGES.md  CNAME  COLLABORATOR_GUIDE.md  COLLABORATOR_GUIDE.rst  CONTRIBUTING.md  ConsAggShockModel.html  ConsIndShockModel.html  ConsMarkovModel.html  ConsPrefShockModel.html  ConsPrefShockModel_old.html  ConsumerExamples.py  ConsumerParameters.html  ConsumptionSavingModel.html  ConsumptionSavingModel.py  DCT-Copula-Illustration.ipynb  DCT-Copula-Illustration.py  DCtest.py  DCtest2.py  DCtest3.py  DCtest4.py  DiscreteChoice.py  EstimationParameters.html  FashionVictimModel.html  FashionVictimParams.html  GOVERNANCE.md  HAFiscal-Latest  (+77 more)
.agents/: .ragignore  rag_config.yaml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md
Biotech/: BiotechEstimation.py  BiotechEstimationData.txt  BiotechModel.py
ConsumptionSaving/: China.py  ConsAggMarkovTest.py  ConsAggShockModel.py  ConsAggShockModel_gn.py  ConsAggShockModel_sparse.py  ConsGenIncProcessModel.py  ConsIndShockModel.cl  ConsIndShockModel.py  ConsIndShockModel_gn.py  ConsIndShockOpenCL.py  ConsLaborModel.py  ConsMarkovModel.py  ConsMedModel.py  ConsPersistentShockModel.py  ConsPrefShockModel.py  ConsRepAgentModel.py  ConsumerParameters.py  ConsumptionSavingModel.py  ConsumptionSavingModel_gn.py  Demo.py  ForEva.py  ImpulseResponse.py  MultithreadDemo.py  NonDurables_During_Great_Recession.py  RepAgentModel.py  StickyExpectations.py  TractableBufferStockModel.py
ConsumptionSavingModel/: ConsAggShock.py  ConsAggShockModel.py  ConsIndShockModel.py  ConsMarkovModel.py  ConsPrefShockModel.py  ConsPrefShockModel_old.py  ConsumerParameters.py  ConsumptionSavingMarkov.py  ConsumptionSavingModel.py  ConsumptionSavingModel2.py  ConsumptionSavingModel3.py  ConsumptionSavingModel4.py  ConsumptionSavingModel_examples.py  ConsumptionSavingModel_old.py  MarkovExamples.py  MarkovModel.py  MultithreadDemo.py  SetupConsumerParameters.py  SetupPrefShockConsParameters.py  SetupSCFdata.py  SolvingMicroDSOPs.py  SolvingMicroDSOPs_old.py  TractableBufferStockModel.py
Demos/: ConsIndShockModel  ConsIndShockModel_Try-Alternative-Parameter-Values.py
DiscreteChoice/: DCtest.py  DCtest2.py  DCtest3.py  DCtest4.py  DiscreteChoice.py
Documentation/: ARKitecture.md  CHANGELOG.html  CHANGELOG.md  CONTRIBUTING.md  ConsumptionSavingModels.tex  HARKmanual.md  HARKmanual.tex  Makefile  NARK.tex  OpenCLsetup.tex  OpenCLsetup_20180407-0830h.tex  Style.tex.txt  api-consumptionsaving.rst  api-core.rst  api-cs-ConsAggShockModel.rst  api-cs-ConsGenIncProcessModel.rst  api-cs-ConsIndShockModel.rst  api-cs-ConsMarkovModel.rst  api-cs-ConsMedModel.rst  api-cs-ConsPortfolioModel.rst  api-cs-ConsPrefShockModel.rst  api-cs-ConsRepAgentModel.rst  api-cs-TractableBufferStockModel.rst  api-dcegm.rst  api-estimation.rst  api-interpolation.rst  api-parallel.rst  api-simulation.rst  api-utilities.rst  api-validators.rst  api.rst  conf.py  heterogeneous_agent_bottom-up_vs_top-down.md  index.rst  index_core.rst  instructions.md  instructions.txt  introduction.md  license.html  license.md  (+9 more)
Examples/: Gentle-Intro-To-HARK.ipynb  util.py
FashionVictim/: ConsAggShockModel.py  FashionVictimModel.py  FashionVictimParams.py
HARK/: .#core.py  GOVERNANCE.md  HARK_logger.py  HARKcore.py  HARKestimation.py  HARKinterpolation.py  SSJutils.py  Untitled.ipynb  __init__.py  chunkymodel.py  core.py  core_before_SB_fixes.py  dcegm.py  discontools.py  distribution.py  distribution.py.orig  distribution_Plus.py  econforgeinterp  econforgeinterp.py  estimation.py  fast_interpolation.py  frame.py  gpuinterp.py  helpers.py  interpolation.py  irregularinterp.py  lifecycle.py  logger.py  mat_methods.py  metric.py  model.py  multinterp.py  neldermead.py  numba.py  numba_tools.py  parallel.py  parameters.py  parser.py  policy.py  regularinterp.py  (+11 more)
Luetticke_wrapper/: ConsIndShockModel_extension.py  Luetticke_wrapper.py
SolvingMicroDSOPs/: EstimationParameters.py  EstimationParameters_old.py  SetupSCFdata.py  StructEstimation.py
Testing/: ComparisonTests.py  Comparison_UnitTests.py  FellaTest.py  HARKutilities_Tests.py  HARKutilities_UnitTests.py  ModelTesting.py  ModelTestingExample.py  MultithreadDemo.py  OpenCLtest.py  OpenCLtest_20180407-1207h.py  TBSmodelTesting.py  TBSunitTests.py  TractableBufferStockModel_UnitTests.py
TractableBufferStock/: ModelTesting.py  ModelTestingExample.py  TBSexamples.py  TBSexamples_interactive.ipynb  TBSunittests.py  TractableBufferStock.py  Untitled.ipynb
_sources/: ConsAggShockModel.txt  ConsMarkovModel.txt  ConsumptionSavingModel_old.txt  EstimationParameters.txt  HARKcore.txt  HARKparallel.txt  HARKsimulation.txt  MakeCSTWfigs.txt  MakeCSTWfigsForSlides.txt  MultithreadDemo.txt  SetupParamsCSTW.txt  SetupSCFdata.txt  SolvingMicroDSOPs.txt  SolvingMicroDSOPs_old.txt  cstwMPC.txt  index.txt  modules.txt  temp-modules.txt
binder/: postBuild  postBuild.bat  requirements.txt
cAndCwithStickyE/: IncomeDistTest.py  MakeTable.py  README.txt  StataRegressions.do  StickyEMarkovmodel.py  StickyETimeSeries.do  StickyE_MAIN.py  StickyE_NO_MARKOV.py  StickyEmodel.py  StickyEparams.py  StickyEtools.py  cAndCwithStickyE.py  cAndCwithStickyEMarkov.py
ci/: nbval-tests.sh
config/: rag_config.yaml
cstwMPC/: MakeCSTWfigs.py  SetupParamsCSTW.py  SetupParamsCSTW_old.py  SetupParamsCSTWnew.py  cstwMPC.py  cstwMPC_old.py  cstwMPCnew.py  cstwMPCold.py
doc-example/: ConsPrefShockModel_old.rst  ConsumerParameters.rst  ConsumptionSavingModel.rst  Makefile  MarkovExamples.rst  conf.py  index.rst  instructions.md  modules.rst  simple-steps-getting-sphinx-working.md
docs/: CHANGELOG.html  CHANGELOG.md  ConsIndShockModel.rst  ConsPrefShockModel.rst  FashionVictimModel.rst  FashionVictimParams.rst  HARKestimation.rst  HARKinterpolation.rst  HARKutilities.rst  Makefile  StructEstimation.rst  Style.tex.txt  (+8 more)
(+2617 files in other folders)
