[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "econ-ark"
version = "0.17.0"
authors = [{name = "Econ-ARK team", email = "econ-ark@jhuecon.org"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Other/Nonlisted Topic",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
description = "Heterogenous Agents Resources & toolKit"
keywords = ["economics", "modelling", "modeling", "heterogeneity"]
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]
license = "Apache-2.0"
license-files = ["LICENSE"]

[tool.setuptools.dynamic.dependencies]
file = "requirements/base.txt"

[tool.setuptools.dynamic.optional-dependencies]
dev.file = "requirements/dev.txt"
doc.file = "requirements/doc.txt"

[project.urls]
Homepage = "https://github.com/econ-ark/HARK"
"Bug Reports" = "https://github.com/econ-ark/HARK/issues"
Documentation = "https://econ-ark.github.io/HARK"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.packages.find]
exclude = ["binder", "docs", "examples", "tests*"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.csv", "*.txt"]

[tool.ruff]
include = ["*.ipynb"]
[tool.ruff.lint]
ignore = ["E731", "E721", "E402", "F841", "F821", "F405", "F403", "E722", "E741", "F811"]
