[metadata]
name = econ-ark
version = 0.12.0
url = https://github.com/econ-ark/HARK
project_urls =
        Bug Reports = https://github.com/econ-ark/HARK/issues
        Documentation = https://econ-ark.github.io/HARK
author = Econ-ARK team
author_email = econ-ark@jhuecon.org
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Other/Nonlisted Topic
    Natural Language :: English
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = Apache Software License
description = Heterogenous Agents Resources & toolKit
long_description = file: README.md
long_description_content_type = text/markdown
keywords = economics modelling modeling heterogeneity

[options]
packages = find:
include_package_data = True
install_requires =
    numpy
    matplotlib
    scipy
    dill
    joblib
    quantecon
    interpolation
    numba
    pandas
    networkx
    pydot
    xarray
python_requires = >=3.7

[options.extras_require]
dev =  
    Sphinx
    nbsphinx
    recommonmark
    pre-commit
    seaborn

[bdist_wheel]
universal=1
