[metadata]
name = econ-ark
version = 0.13.0
url = https://github.com/econ-ark/HARK
project_urls =
        Bug Reports = https://github.com/econ-ark/HARK/issues
        Documentation = https://econ-ark.github.io/HARK
author = Econ-ARK team
author_email = econ-ark@jhuecon.org
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Other/Nonlisted Topic
    Natural Language :: English
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = Apache Software License
description = Heterogenous Agents Resources & toolKit
long_description = file: README.md
long_description_content_type = text/markdown
keywords = economics modelling modeling heterogeneity

[options]
packages = find:
include_package_data = True
install_requires =
    estimagic
    interpolation>=2.2.3
    joblib>=1.2
    jupyterlab>=3.6
    jupytext>=1.14
    matplotlib>=3.6
    networkx>=3
    numba>=0.56
    numpy>=1.23
    pandas>=1.5
    quantecon
    scipy>=1.10
    seaborn>=0.12
    xarray>=2023
python_requires = >=3.8

[options.extras_require]
dev =
    nbsphinx>=0.8
    nbval
    pre-commit
    pytest
    pytest-xdist
    recommonmark>=0.7
    sphinx>=6.1
    sphinx-rtd-theme

[bdist_wheel]
universal=1
