[metadata]
name = econ-ark
version = 0.13.0
url = https://github.com/econ-ark/HARK
project_urls =
        Bug Reports = https://github.com/econ-ark/HARK/issues
        Documentation = https://econ-ark.github.io/HARK
author = Econ-ARK team
author_email = econ-ark@jhuecon.org
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Other/Nonlisted Topic
    Natural Language :: English
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = Apache Software License
description = Heterogenous Agents Resources & toolKit
long_description = file: README.md
long_description_content_type = text/markdown
keywords = economics modelling modeling heterogeneity

[options]
packages = find:
include_package_data = True
install_requires =
    numpy>=1.23
    matplotlib>=3.6
    scipy>=1.10
    dill>=0.3
    joblib>=1.2
    quantecon>=0.6
    interpolation>=2.2.3
    numba>=0.56
    pandas>=1.5
    networkx>=3
    pydot
    xarray>=2023
    jupyterlab>=3.6
    jupytext>=1.14
    seaborn>=0.12
python_requires = >=3.8

[options.extras_require]
dev =
    Sphinx>=6.1
    nbsphinx>=0.8
    recommonmark>=0.7
    pre-commit
    pytest
    nbval
    pytest-xdist
    psutil
    estimagic

[bdist_wheel]
universal=1
